Project

General

Profile

Actions

Bug #18578

closed

failed filelock.can_read(-1) assertion in Server::_dir_is_nonempty

Added by Zheng Yan over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken, jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

An user said he encountered this assertion while running vdbench


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #18707: kraken: failed filelock.can_read(-1) assertion in Server::_dir_is_nonemptyResolvedNathan CutlerActions
Copied to CephFS - Backport #18708: jewel: failed filelock.can_read(-1) assertion in Server::_dir_is_nonemptyResolvedZheng YanActions
Actions #1

Updated by Zheng Yan over 7 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by John Spray about 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to kraken, jewel
Actions #3

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #18707: kraken: failed filelock.can_read(-1) assertion in Server::_dir_is_nonempty added
Actions #4

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #18708: jewel: failed filelock.can_read(-1) assertion in Server::_dir_is_nonempty added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF