mds: fix incorrect assertion in Server::_dir_is_nonempty()

when filelock is in XLOCKDONE state. client of xlocker can rdlock
the filelock. In that case, only client of xlocker can read the lock.

Fixes: http://tracker.ceph.com/issues/18578
Signed-off-by: Yan, Zheng <zyan@redhat.com>
(cherry picked from commit fe4ab52b30079a785be053a9fd0197d6990737fe)